fix(docs-infra): add horizontal margins to nav menu (#42561)
add a 2px left and right margin to the aio-nav-menu to make
sure that the items outline doesn't get cropped

PR Close #42561

--- a/aio/src/styles/1-layouts/sidenav/_sidenav.scss
+++ b/aio/src/styles/1-layouts/sidenav/_sidenav.scss
@@ -41,7 +41,7 @@ mat-sidenav-container.sidenav-container {
 
 aio-nav-menu {
   display: block;
-  margin: 0 auto;
+  margin: 0 2px;
   max-width: 268px;
 
   &:first-of-type {
